test/corpus/cues.txt
================================================================================
Cue with identifier and settings
================================================================================

WEBVTT

intro
00:00:00.400 --> 00:00:06.080 align:left position:18%
Welcome to the example.

--------------------------------------------------------------------------------

(webvtt
  (header)
  (cue
    (cue_identifier)
    (cue_timing
      (timestamp)
      (timestamp)
      (setting
        (setting_name)
        (setting_value))
      (setting
        (setting_name)
        (setting_value)))
    (cue_text
      (text))))

================================================================================
Numeric identifier and multi-line text
================================================================================

WEBVTT

1
00:00:01.000 --> 00:00:04.000
First line
Second line

--------------------------------------------------------------------------------

(webvtt
  (header)
  (cue
    (cue_identifier)
    (cue_timing
      (timestamp)
      (timestamp))
    (cue_text
      (text))
    (cue_text
      (text))))

================================================================================
Short timestamps without spaces around the arrow
================================================================================

WEBVTT

00:01.000-->00:02.000
Hi

--------------------------------------------------------------------------------

(webvtt
  (header)
  (cue
    (cue_timing
      (timestamp)
      (timestamp))
    (cue_text
      (text))))

================================================================================
Cue without text
================================================================================

WEBVTT

00:00:01.000 --> 00:00:02.000

00:00:02.000 --> 00:00:03.000
Next

--------------------------------------------------------------------------------

(webvtt
  (header)
  (cue
    (cue_timing
      (timestamp)
      (timestamp)))
  (cue
    (cue_timing
      (timestamp)
      (timestamp))
    (cue_text
      (text))))

================================================================================
Extra blank lines between cues
================================================================================

WEBVTT


00:00:01.000 --> 00:00:02.000
One



00:00:02.000 --> 00:00:03.000
Two

--------------------------------------------------------------------------------

(webvtt
  (header)
  (cue
    (cue_timing
      (timestamp)
      (timestamp))
    (cue_text
      (text)))
  (cue
    (cue_timing
      (timestamp)
      (timestamp))
    (cue_text
      (text))))
