test/corpus/header.txt
================================================================================
Header only
================================================================================

WEBVTT

--------------------------------------------------------------------------------

(webvtt
  (header))

================================================================================
Header with title
================================================================================

WEBVTT Example captions

--------------------------------------------------------------------------------

(webvtt
  (header
    (title)))

================================================================================
Header with metadata
================================================================================

WEBVTT
Kind: captions
Language: en

--------------------------------------------------------------------------------

(webvtt
  (header
    (metadata
      (metadata_name)
      (metadata_value))
    (metadata
      (metadata_name)
      (metadata_value))))

================================================================================
HLS timestamp map
================================================================================

WEBVTT
X-TIMESTAMP-MAP=MPEGTS:900000,LOCAL:00:00:00.000

--------------------------------------------------------------------------------

(webvtt
  (header
    (metadata
      (metadata_name)
      (metadata_value))))

================================================================================
Byte order mark
================================================================================

﻿WEBVTT

--------------------------------------------------------------------------------

(webvtt
  (header))
